Final Replacement: Move working code to software folder